--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -228,7 +228,7 @@ queue_4 : "⏳ ᴅɪᴛᴀᴍʙᴀʜᴋᴀɴ ᴋᴇ ᴀɴᴛʀɪᴀɴ ᴅɪ **#{
 queue_5 : "ʜᴀɴʏᴀ sᴀᴛᴜ ᴛʀᴀᴄᴋ ᴅɪ ᴅᴀʟᴀᴍ ᴀɴᴛʀɪᴀɴ, sɪʟᴀʜᴋᴀɴ ᴛᴀᴍʙᴀʜᴋᴀɴ ʟᴀɢɪ ᴜɴᴛᴜᴋ ᴄʜᴇᴄᴋ ʟɪsᴛ"
 
 # All Streaming Lines
-stream_1 : "❏ **ᴍᴜʟᴀɪ ᴍᴇᴍᴜᴛᴀʀ**\n├ **ᴊᴜᴅᴜʟ** [{0}]({1})\n├ **ᴅᴜʀᴀsɪ** {2} ᴍᴇɴɪᴛ\n╰ **ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
+stream_1 : "❏ **ᴍᴜʟᴀɪ ᴍᴇᴍᴜᴛᴀʀ**\n├ **ɪɴғᴏʀᴍᴀsɪ** [**ᴅɪ sɪɴɪ**]({1})\n├ **ᴅᴜʀᴀsɪ** {2} ᴍᴇɴɪᴛ\n╰ **ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
 stream_2 : "🎥 **ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ ᴍᴇʟᴀʟᴜɪ ᴜʀʟ** 💡\n\n**🧸 ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ:** {0}"
 stream_3 : "🎥 **ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ** 💡\n\n**📀 ᴊᴜᴅᴜʟ:** {0}\n⏰ **ᴅᴜʀᴀsɪ**: {1}\n🧸 **ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ:** {2} "
 stream_4 : "🎥 **ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ** 💡\n\n**📀 ᴊᴜᴅᴜʟ:** [{0}]({1})\n⏰ **ᴅᴜʀᴀsɪ**: {2}\n🧸 **ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ:** {3}"
