--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -228,18 +228,18 @@ queue_4 : "⏳ ᴅɪᴛᴀᴍʙᴀʜᴋᴀɴ ᴋᴇ ᴀɴᴛʀɪᴀɴ ᴅɪ **#{
 queue_5 : "ʜᴀɴʏᴀ sᴀᴛᴜ ᴛʀᴀᴄᴋ ᴅɪ ᴅᴀʟᴀᴍ ᴀɴᴛʀɪᴀɴ, sɪʟᴀʜᴋᴀɴ ᴛᴀᴍʙᴀʜᴋᴀɴ ʟᴀɢɪ ᴜɴᴛᴜᴋ ᴄʜᴇᴄᴋ ʟɪsᴛ"
 
 # All Streaming Lines
-stream_1 : "❏ **ᴍᴜʟᴀɪ ᴍᴇᴍᴜᴛᴀʀ**\n├ **ɪɴғᴏʀᴍᴀsɪ** [ᴅɪ sɪɴɪ]({1})\n├ **ᴅᴜʀᴀsɪ** {2} ᴍᴇɴɪᴛ\n╰ **ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
-stream_2 : "🎥 **ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ ᴍᴇʟᴀʟᴜɪ ᴜʀʟ** 💡\n\n**🧸 ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ:** {0}"
-stream_3 : "🎥 **ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ** 💡\n\n**📀 ᴊᴜᴅᴜʟ:** {0}\n⏰ **ᴅᴜʀᴀsɪ**: {1}\n🧸 **ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ:** {2} "
-stream_4 : "🎥 **ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ** 💡\n\n**📀 ᴊᴜᴅᴜʟ:** [{0}]({1})\n⏰ **ᴅᴜʀᴀsɪ**: {2}\n🧸 **ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ:** {3}"
+stream_1 : "**❏ ᴍᴜʟᴀɪ ᴍᴇᴍᴜᴛᴀʀ**\n**├ ɪɴғᴏʀᴍᴀsɪ** [ᴅɪ sɪɴɪ]({1})\n**├ ᴅᴜʀᴀsɪ** {2} ᴍᴇɴɪᴛ\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
+stream_2 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ ᴍᴇʟᴀʟᴜɪ ᴜʀʟ**\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {0}"
+stream_3 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ**\n**├ ᴊᴜᴅᴜʟ** {ᴅɪ sɪɴɪ}\n**├ ᴅᴜʀᴀsɪ** {1}\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {2} "
+stream_4 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ**\n**├ ᴊᴜᴅᴜʟ** [ᴅɪ sɪɴɪ]({1})\n**├ ᴅᴜʀᴀsɪ** {2}\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
 
 # Inline Buttons
 
 #General Buttons
-CLOSE_BUTTON : "ᴛᴜᴛᴜᴘ"
-CLOSEMENU_BUTTON : "ᴛᴜᴛᴜᴘ"
-BACK_BUTTON : "⬅ ᴋᴇᴍʙᴀʟɪ"
-UNBAN_BUTTON : "🗑 ᴜɴʙᴀɴ ᴀssɪsᴛᴀɴ"
+CLOSE_BUTTON : "**ᴛᴜᴛᴜᴘ**"
+CLOSEMENU_BUTTON : "**ᴛᴜᴛᴜᴘ**"
+BACK_BUTTON : "**⬅ ᴋᴇᴍʙᴀʟɪ**"
+UNBAN_BUTTON : "**🗑 ᴜɴʙᴀɴ ᴀssɪsᴛᴀɴ**"
 
 #Lyrics
 L_B_1 : "🚀 ᴘᴇʀɪᴋsᴀ ʟʏʀɪᴄs"
@@ -256,17 +256,17 @@ S_B_8 : "🗂 ᴍᴇɴᴜ ᴘᴇʀɪɴᴛᴀʜ"
 S_B_9 : "📣 ɢʀᴏᴜᴘ"
 
 #Help 
-H_B_1 : "ᴘᴇʀɪɴᴛᴀʜ ᴀᴅᴍɪɴ"
-H_B_2 : "ᴍᴀɪɴᴋᴀɴ ᴘᴇʀɪɴᴛᴀʜ"
-H_B_3 : "ᴘᴇʀɪɴᴛᴀʜ ʙᴏᴛ"
-H_B_4 : "ᴘᴇʀɪɴᴛᴀʜ ᴇᴋsᴛʀᴀ"
-H_B_5 : "🗑 ᴄʟᴏsᴇ"
-H_B_6 : "ᴘᴇʀɪɴᴛᴀʜ sᴜᴅᴏ ᴜsᴇʀ"
+H_B_1 : "**ᴘᴇʀɪɴᴛᴀʜ ᴀᴅᴍɪɴ**"
+H_B_2 : "**ᴍᴀɪɴᴋᴀɴ ᴘᴇʀɪɴᴛᴀʜ**"
+H_B_3 : "**ᴘᴇʀɪɴᴛᴀʜ ʙᴏᴛ**"
+H_B_4 : "**ᴘᴇʀɪɴᴛᴀʜ ᴇᴋsᴛʀᴀ**"
+H_B_5 : "**🗑 ᴄʟᴏsᴇ**"
+H_B_6 : "**ᴘᴇʀɪɴᴛᴀʜ sᴜᴅᴏ ᴜsᴇʀ**"
 
 #PlayMode
-PM_B_1 : "ᴅɪʀᴇᴄᴛ ᴘʟᴀʏ"
-PM_B_2 : "ᴍᴀʀᴋᴜᴘ sᴇʙᴀʀɪs"
-PM_B_3 : "ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ"
+PM_B_1 : "**ᴅɪʀᴇᴄᴛ ᴘʟᴀʏ**"
+PM_B_2 : "**ᴍᴀʀᴋᴜᴘ sᴇʙᴀʀɪs**"
+PM_B_3 : "**ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ**"
 #Play
 P_B_1 : "🎸 ᴍᴜꜱɪᴋ"
 P_B_2 : "🎥 ᴠɪᴅᴇᴏ"
