--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -228,10 +228,10 @@ queue_4 : "⏳ ᴅɪᴛᴀᴍʙᴀʜᴋᴀɴ ᴋᴇ ᴀɴᴛʀɪᴀɴ ᴅɪ **#{
 queue_5 : "ʜᴀɴʏᴀ sᴀᴛᴜ ᴛʀᴀᴄᴋ ᴅɪ ᴅᴀʟᴀᴍ ᴀɴᴛʀɪᴀɴ, sɪʟᴀʜᴋᴀɴ ᴛᴀᴍʙᴀʜᴋᴀɴ ʟᴀɢɪ ᴜɴᴛᴜᴋ ᴄʜᴇᴄᴋ ʟɪsᴛ"
 
 # All Streaming Lines
-stream_1 : "**❏ ᴍᴜʟᴀɪ ᴍᴇᴍᴜᴛᴀʀ**\n**├ ɪɴғᴏʀᴍᴀsɪ** [ᴅɪ sɪɴɪ]({1})\n**├ ᴅᴜʀᴀsɪ** {2} ᴍᴇɴɪᴛ\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
-stream_2 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ ᴍᴇʟᴀʟᴜɪ ᴜʀʟ**\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {0}"
-stream_3 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ**\n**├ ᴊᴜᴅᴜʟ** {ᴅɪ sɪɴɪ}\n**├ ᴅᴜʀᴀsɪ** {1}\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {2} "
-stream_4 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ**\n**├ ᴊᴜᴅᴜʟ** [ᴅɪ sɪɴɪ]({1})\n**├ ᴅᴜʀᴀsɪ** {2}\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
+stream_1 : "**❏ ᴍᴜʟᴀɪ ᴍᴇᴍᴜᴛᴀʀ**\n**├ ɪɴғᴏʀᴍᴀsɪ** [ᴅɪ sɪɴɪ]({1})\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
+stream_2 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ ᴍᴇʟᴀʟᴜɪ ᴜʀʟ** 💡\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {0}"
+stream_3 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ** 💡\n**├ ᴊᴜᴅᴜʟ** {ᴅɪ sɪɴɪ}\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {2} "
+stream_4 : "**❏ ᴍᴇᴍᴜʟᴀɪ sᴛʀᴇᴀᴍɪɴɢ** 💡\n**├ ᴊᴜᴅᴜʟ** [ᴅɪ sɪɴɪ]({1})\n**╰ ᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ** {3}"
 
 # Inline Buttons
 
