--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -276,7 +276,7 @@ P_B_4 : "🎵 ᴘᴜᴛᴀʀ ᴘʟᴀʏʟɪsᴛ"
 #Playlist
 PL_B_1 : "🚀 ᴅᴀғᴛᴀʀ ᴅɪᴘᴜᴛᴀʀ"
 PL_B_2 : "✭"
-PL_B_3 : "✭"
+PL_B_3 : "ᴍᴇɴᴜ"
 PL_B_4 : "📡 ᴍᴏᴅᴇ ᴘᴜᴛᴀʀ"
 PL_B_5 : "🔄 ʜᴀᴘᴜs sᴇʟᴜʀᴜʜ ᴅᴀғᴛᴀʀ ᴘᴜᴛᴀʀ"
 PL_B_6 : "↗️ ʜᴀᴘᴜs ᴅᴀғᴛᴀʀ ᴘᴜᴛᴀʀ"
