--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -152,7 +152,7 @@ play_7 : "ᴍᴀᴀꜰ! ʙᴏᴛ ʜᴀɴʏᴀ ᴍᴇɴɢɪᴢɪɴᴋᴀɴ ᴘᴀ
 play_8 : "ʙᴜᴋᴀɴ ᴇᴋsᴛᴇɴsɪ ꜰɪʟᴇ ᴠɪᴅᴇᴏ ʏᴀɴɢ ᴠᴀʟɪᴅ!\n\n**ꜰᴏʀᴍᴀᴛ ʏᴀɴɢ ᴅɪᴅᴜᴋᴜɴɢ:** {0}"
 play_9 : "ᴜᴋᴜʀᴀɴ ꜰɪʟᴇ ᴠɪᴅᴇᴏ ʜᴀʀᴜs ᴋᴜʀᴀɴɢ ᴅᴀʀɪ 1 ɢɪʙ"
 play_10 : "**ꜰɪᴛᴜʀ ᴅᴀꜰᴛᴀʀ ᴘᴜᴛᴀʀ ʏᴏᴜᴛᴜʙᴇ**\n\nᴘɪʟɪʜ ᴍᴏᴅᴇ ᴅɪ ᴍᴀɴᴀ ᴀɴᴅᴀ ɪɴɢɪɴ ᴍᴇᴍᴜᴛᴀʀ sᴇʟᴜʀᴜʜ ᴅᴀꜰᴛᴀʀ ᴘᴜᴛᴀʀ ʏᴏᴜᴛᴜʙᴇ"
-play_11 : "**❏ ᴊᴜᴅᴜʟ** **\n├ {0}\n\n╰ ᴅᴜʀᴀsɪ** {1} ᴍᴇɴɪᴛ"
+play_11 : "**❏ ᴊᴜᴅᴜʟ** **\n├ {0}\n╰ ᴅᴜʀᴀsɪ** {1} ᴍᴇɴɪᴛ"
 play_12 : "**ᴍᴏᴅᴇ ᴘᴜᴛᴀʀ sᴘᴏᴛɪꜰʏ**\n\nᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ:- {0}"
 play_13 : "**ᴅᴀꜰᴛᴀʀ ᴘᴜᴛᴀʀ ᴀᴘᴘʟᴇ**\n\nᴅɪᴍɪɴᴛᴀ ᴏʟᴇʜ:- {0}"
 play_14 : "**ᴛɪᴅᴀᴋ ᴅᴀᴘᴀᴛ ᴍᴇᴍᴠᴇʀɪꜰɪᴋᴀsɪ ᴜʀʟ.**\nʙᴏᴛ ʙᴇʀᴛᴀɴʏᴀ-ᴛᴀɴʏᴀ ᴀᴘᴀᴋᴀʜ ᴜʀʟ ɪɴɪ ᴍɪʟɪᴋ sᴀʟᴀʜ sᴀᴛᴜ ᴘʟᴀᴛꜰᴏʀᴍ ʙᴇʀɪᴋᴜᴛ: ʏᴏᴜᴛᴜʙᴇ, ᴀᴘᴘʟᴇᴍᴜsɪᴄ, sᴘᴏᴛɪꜰʏ, ʀᴇssᴏ, ᴅᴀɴ sᴏᴜɴᴅᴄʟᴏᴜᴅ.\n\nᴀɴᴅᴀ ᴅᴀᴘᴀᴛ ᴍᴇɴɢɢᴜɴᴀᴋᴀɴ /stream ᴜɴᴛᴜᴋ ᴍ3ᴜ8 ᴀᴛᴀᴜ ʀᴇᴍᴏᴛᴇ ʟɪɴᴋs ."
